# linear-regression

./: linear_regression.ipynb  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
