[project]
name = "linear-regression-taxi"
version = "0.1.0"
description = ""
authors = [
    {name = "supratim24",email = "supratimhldr6@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.0,<2.3.0)",
    "numpy (>=2.0.0,<2.1.0)",
    "matplotlib (>=3.10.0,<3.11.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "google-ml-edu (==0.1.3)",
    "keras (>=3.8.0,<3.9.0)",
    "tensorflow (>=2.18.0,<2.19.0)",
    "plotly (>=6.7.0,<7.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
